# microtvm-device

./: .gitignore  Makefile  README.md  pyproject.toml
config/: device_table.template.json
microtvm_device/: device_client.py  device_server.py  device_utils.py  microDevice_pb2.py  microDevice_pb2_grpc.py  utils.py
proto/microtvm_device/: microDevice.proto
tests/: test_micro_device.py
tests/config/: device_table.template.json
tests/scripts/: task_device_query.sh  task_device_request.sh  task_start_server.sh  util.sh
